Fix category and subcategory boxes text alignment
Fixed category and subcategory boxes to have their text properly aligned
center of the box by adding a class to the <p class="box-text"> inside
of the box to set proper css properties on

--- a/static/style.css
+++ b/static/style.css
@@ -142,6 +142,12 @@ nav p {
     transform: scale(1.05);
 }
 
+.box-text {
+    text-align: center;
+    white-space: normal;
+    word-wrap: break-word;
+}
+
 /* Material box styling */
 .material-box {
     display: flex;
